WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132454
REGRESSION (WebKit2) Need to support Learn button
https://bugs.webkit.org/show_bug.cgi?id=132454
Summary
REGRESSION (WebKit2) Need to support Learn button
Enrica Casucci
Reported
2014-05-01 18:07:01 PDT
Need to add support for the Learn button in the menu for Traditional Chinese. <
rdar://problem/16778889
>
Attachments
Patch
(4.08 KB, patch)
2014-05-01 18:11 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-05-01 18:11:40 PDT
Created
attachment 230638
[details]
Patch
Benjamin Poulain
Comment 2
2014-05-01 18:21:14 PDT
Comment on
attachment 230638
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=230638&action=review
> Source/WebKit2/ChangeLog:12 > + the button when appropriate as well as the implemetation of the action
typo: implemetation
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:838 > + CGRect presentationRect = _page->editorState().selectionRects[0].rect();
You don't need to create this outside of the if() branch. The compiler cannot optimize this out because of the objc-msgsend below.
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:920 > + if (!UIKeyboardEnabledInputModesAllowOneToManyShortcuts())
lol at the name :)
Enrica Casucci
Comment 3
2014-05-01 18:40:53 PDT
Committed revision 168142.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug